--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,57 +1,53 @@
 name: p2p_file_share
-description: "A cross-platform P2P file sharing application"
+description: A modern P2P file sharing app for cross-platform offline transfers
 publish_to: 'none'
-
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.9.0
+  sdk: '>=3.0.0 <4.0.0'
+  flutter: ">=3.10.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.8
   
-  # Network and discovery
-  network_info_plus: ^5.0.0
-  multicast_dns: ^0.3.2+4
-  
-  # File operations
-  file_picker: ^8.0.0+1
-  path_provider: ^2.1.2
-  permission_handler: ^11.3.0
-  
-  # UI and state management
+  # State Management
   provider: ^6.1.1
-  shared_preferences: ^2.2.2
-  qr_flutter: ^4.1.0 # For generating QR codes
-  mobile_scanner: ^4.0.0 # For scanning QR codes
+  
+  # Persistence
+  shared_preferences: ^2.2.3
+
+  # File Operations
+  file_picker: ^6.2.1
+  path_provider: ^2.1.3
+  open_filex: ^4.3.4
   
   # Networking
-  dio: ^5.4.0
+  multicast_dns: ^0.3.2+4
+  network_info_plus: ^5.0.3
+  
+  # Permissions
+  permission_handler: ^11.3.1
+  
+  # UI Components
+  cupertino_icons: ^1.0.6
+  flutter_local_notifications: ^17.2.1
   
   # Utilities
-  mime: ^1.0.4
-  crypto: ^3.0.3
-  uuid: ^4.3.3
   intl: ^0.19.0
-  
-  # Notifications
-  flutter_local_notifications: ^17.0.0
-  
-  # Image picker for camera and gallery access
-  image_picker: ^1.0.4
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0
-  mockito: ^5.4.4
-  build_runner: ^2.4.8
+  flutter_lints: ^6.0.0
 
 flutter:
   uses-material-design: true
-  
-  # assets:
-  #   - assets/icons/
-  #   - assets/samples/
+#   assets:
+#     - assets/images/
+#     - assets/icons/
+
+# flutter_icons:
+#   android: "launcher_icon"
+#   ios: true
+#   image_path: "assets/icon/icon.png"
