--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,23 +18,24 @@ dependencies:
   shared_preferences: ^2.2.3
 
   # File Operations
-  file_picker: ^6.2.1
+  file_picker: ^10.3.3
   path_provider: ^2.1.3
   open_filex: ^4.3.4
   
   # Networking
   multicast_dns: ^0.3.2+4
-  network_info_plus: ^5.0.3
+  network_info_plus: ^7.0.0
   
   # Permissions
-  permission_handler: ^11.3.1
+  permission_handler: ^12.0.1
   
   # UI Components
   cupertino_icons: ^1.0.6
-  flutter_local_notifications: ^17.2.1
+  flutter_local_notifications: ^19.4.1
   
   # Utilities
-  intl: ^0.19.0
+  intl: ^0.20.2
+  mime: ^2.0.0
 
 dev_dependencies:
   flutter_test:
