--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   file_picker: ^10.3.3
   path_provider: ^2.1.3
   open_filex: ^4.3.4
+  open_file_plus: ^3.4.1
   
   # Networking
   multicast_dns: ^0.3.2+4
