--- a/macos/Runner/DebugProfile.entitlements
+++ b/macos/Runner/DebugProfile.entitlements
@@ -10,5 +10,11 @@
 	<true/>
 	<key>com.apple.security.network.server</key>
 	<true/>
+	<!-- Allow app to read files user selects in a file open dialog -->
+	<key>com.apple.security.files.user-selected.read-only</key>
+	<true/>
+	<!-- Allow app to write to the user's Downloads folder -->
+	<key>com.apple.security.files.downloads.read-write</key>
+	<true/>
 </dict>
 </plist>
